--- a/daw/entornoDesarrollo/eD_Uno.html
+++ b/daw/entornoDesarrollo/eD_Uno.html
@@ -111,7 +111,7 @@
                 <li><b>Geración de código:</b> se genera el código objeto.</li>
             </ul>
             <p>El <b>enlazador</b> insertará en el código objeto las librerías necesarias para que se pueda producir un programa ejecutable. Si se hace referencia a otros ficheros que contengan las librerías especificadas en el código objeto, se combina con dicho código y se crea el fichero ejecutable.</p>
-            <h4 class="apartado">1.3.3.</h4>
+            <h4 class="apartado">1.3.3. Máquinas virtuales</h4>
             <p>Una máquina virtual es un tipo de software capaz de ejecutar programas como si fuese una máquina real.</p>
             <ul>
                 <li><b>De sistema:</b> permiten virtualizar máquinas con distintos sistemas operativos en cada una.</li>
@@ -211,7 +211,7 @@
                 </li>
                 <li><b>Lenguajes funcionales:</b> están basados en el concepto de función y estarán formados por definiciones de funciones junto con sus argumentos. Entre sus características destaca que no existe la operación de asignación. Las variables almacenan definiciones a expresiones. El resultado de un cálculo es la entrada del siguiente, y así sucesivamente hasta que se consigue el valor deseado. Apenas se usar para el software comercial.</li>
                 <li><b>Lenguajes lógicos:</b> están basados en el concepto de razonamiento, deductivo o inductivo. A partir de una base de datos consistente en un conjunto de entidades, propiedades de esas entidades o relaciones entre entidades, el sistema es capaz de hacer <b>razonamientos</b>. Los programas escritos en este lenguaje suelen tener forma de una <b>base de datos</b>, está formada por declaraciones lógicas, que son ciertas o falsas, que podremos consultar. La ejecución será en forma de consultas hacia esa base de datos. El lenguaje lógico más importante es Prolog.</li>
-                <li><b>Lenguajes estructurados:</b></li>
+                <li><b>Lenguajes estructurados:</b> pág 23</li>
             </ul>
 
             <div class="menuOpcional">
