--- a/daw/entornoDesarrollo/eD_Uno.html
+++ b/daw/entornoDesarrollo/eD_Uno.html
@@ -225,7 +225,8 @@
             <!--*********************************************************************-->
             <h3 class="subTitulo" id="subCinco">1.5. - Fases del desarrollo de una aplicación: análisis, diseño, codificación, pruebas, documentación, mantenimiento y explotación</h3>
             <p>Cuando queramos realizar un proyecto de software, antes debemos crear un ciclo de vida en el que examinemos las características para eligir un modelo de desarrollo u otro.</p>
-            <h4 class="apartado">Las etapas para el desarrollo de software tienen un orden, para empezar una etapa, es necesario finalizar la etapa anterior. Después de cada etapa se realiza una revisión para comprobar si se puede pasar a la siguiente.</h4>
+            <h4 class="apartado">Modelo en cascada</h4>
+            <p>Las etapas para el desarrollo de software tienen un orden, para empezar una etapa, es necesario finalizar la etapa anterior. Después de cada etapa se realiza una revisión para comprobar si se puede pasar a la siguiente.</p>
             <p>Permite hacer iteraciones, es decir, si se tiene que volver a una de las etapas anteriores, hay que recorrer de nuevo el resto de etapas.</p>
             <p>Tiene distintas variantes, una de las más utilizadas es el <b>modelo en cascada con retroalimentación</b>, en las etapas se detectan fallos, entonces, será necesario retornar a la etapa anterior para realizar los ajustes pertinentes. Se le conoce como retroalimentación.</p>
             <table>
