fin puto tema 1

--- a/daw/entornoDesarrollo/eD_Uno.html
+++ b/daw/entornoDesarrollo/eD_Uno.html
@@ -857,8 +857,79 @@
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="subSeis">1.6. - Metodologías ágiles</h3>pág 61
-          
+            <h3 class="subTitulo" id="subSeis">1.6. - Metodologías ágiles</h3>
+            <p>Las metodologías ágiles son métodos de gestión que permiten adaptar la forma de trabajo al contexto y naturaleza de un proyecto, basándose en la flexibilidad y la inmediatez y teniendo en cuenta las exigencias del mercado y de los clientes. Los pilares son el trabajo colaborativo y en equipo. Ventajas:</p>
+            <ul>
+                <li>Ahorrar tanto en tiempo como en costes (son baratas y más rápidas).</li>
+                <li>Mejorar la satisfacción del cliente.</li>
+                <li>Mejorar la motivación e implicación del equipo de desarrollo.</li>
+                <li>Mejorar la calidad del producto.</li>
+                <li>Eliminar aquellas características innecesarias del producto.</li>
+                <li>Alertar rápidamente tanto de errores como de problemas.</li>
+            </ul>
+            <p>Aunque hay muchas ventajas estos principios son difíciles:</p>
+            <ul>
+                <li>Aunque la idea de que el cliente esté involucrado en todo el proceso es un incentivo positivo, los clientes tienen que ocuparse de otros procesos de gestión y están sometidos a presiones muy diferentes.</li>
+                <li>La idea de que el equipo de trabajo esté cohesionado es, en ocasiones, ideal. No todos los componentes del equipo tienen la misma personalidad ni el mismo compromiso.</li>
+                <li>Los cambios son complicados con demasiados participantes.</li>
+                <li>Mantener esta línea de trabajo a veces es complicado por razones externas: plazos de entrega, cada componente del equipo trabaja a un ritmo, etcétera.</li>
+                <li>Las grandes compañias están sujetas a muchos cambios a lo largo del tiempo, por lo que muchos métodos de trabajo se pueden ver modificados y pueden existir muchas alteraciones en las metodologías.</li>
+            </ul>
+            <p>Vamos a destacar cuatro metodologías:</p>
+            <h4 class="apartado">Scrum</h4>
+            <p>El enfoque de esta metodología se basa en un trabajo iterativo. Existen tres fases:</p>
+            <ul>
+                <li><b>Planificación:</b> donde se establecen los objetivos generales del proyecto y cómo será la arquitectura.</li>
+                <li><b>Ciclos(sprints):</b> en cada uno de estos ciclos se desarrolla un incremento o iteración.</li>
+                <li><b>Documentación:</b> donde se desarrolla la ayuda del sistema y los manuales de usuario.</li>
+            </ul>
+            <p>aporta una estrategia de desarrollo incremental en lugar de la planificación y ejecución completa del producto. La calidad se basa en el conocimiento innato de las personas antes que en la calidad de los procesos.</p>
+            <h4 class="apartado">Características específicas de Scrum:</h4>
+            <ul>
+                <li>Es el ciclo vida iterativo e incremental, aquel en el que se va liberando el producto por partes, periódicamente, iterativamente, poco a poco y, además, cada entrega es el incremento de funcionalidad respecto de la anterior. Cada periodo de entrega es un sprint. Tienen una longitud fija de entre dos y cuatro semanas.</li>
+                <li>Reunión diaria. Máximo, 15 minutos. Se trata de ver qué se hizo ayer, qué se va a hacer hoy y qué problemas se han encontrado.</li>
+                <li>Reunión de revisiones dle sprint. Al final de cada sprint, se trata de analizar qué se ha completado y qué no.</li>
+                <li>Retrospectiva del sprint. También se realiza al final de sprint, y sirve para que los implicados den sus impresiones sobre sprint. Se utiliza para la mejora del proceso.</li>
+                <li>Durante la fase de cómo va a ser el sprint, se asignan las prioridades del proyecto y riesgo de este.</li>
+                <li>A diferencia de XP, SCRUM no hace indicaciones concretas sobre cómo detallar los requerimientos.</li>
+            </ul>
+            <h4 class="apartado">Programación extrema(XP)</h4>
+            <p>Centrada en potenciar las relaciones interpersonales como clave para el éxito preocupandose por el aprendizaje de los desarrolladores y propiciando un buen clima de trabajo.</p>
+            <p>XP se basa en la retroalimentación continua entre cliente y el equipo de desarrollo. La XP es especialmente adecuada para proyectos con requisitos imprecisos y muy cambiantes.</p>
+            <h4 class="apartado">Características específicas de la XP:</h4>
+            <ul>
+                <li>Los requerimientos se expresan como escenarios (también llamados historias de usuario).</li>
+                <li>Las liberaciones que se van haciendo del sistema se basan en esas historias de usuario.</li>
+                <li>Todos los procesos se basan en la <b>programación a pares:</b> trabajo colectivo del grupo.</li>
+                <li>Existe, por tanto, una refactorización constante.</li>
+                <li>Se valora al individuo y las interacciones del equipo de desarrollo sobre el proceso y las herramientas. La gente es el principal factor de éxito de un proyecto de software.</li>
+                <li>Se trata de desarrollar un software que funcione, más que conseguir una buena documentación.</li>
+                <li>Se propone que exista una interacción y colaboración constante entre el cliente y el equipo de desarrollo.</li>
+                <li>La habilidad de responder a los cambios que puedan surgir a lo largo del proyecto determina también el éxito o el fracaso de este. La planificación no debe ser estricta, sino flexible y abierta.</li>
+            </ul>
+            <h4 class="apartado">Kanban</h4>
+            <p>Significa "tarjetas visuales", se creó en Toyota, y se utiliza para controlar el avance del trabajo en el contexto de una línea de producción.</p>
+            <h4 class="apartado">Características específicas de Kanban</h4>
+            <ul>
+                <li>Visualiza tu trabajo dividido en bloques.</li>
+                <li>Tiene varias barras de progreso donde la tarea va avanzando según su estado.</li>
+                <li>Tener una visión global de todas las tareas pendientes, de las tareas que estamos realizando y de las tareas que hemos realizado.</li>
+                <li>Se pueden hacer cálculos de tiempo con las tareas finalizadas y tareas similares que vamos a realizar, para tener una idea del tiempo que cada uno puede tardar a realizarlas.</li>
+                <li>Limita tu WIP(work in progress). Asigna límites en lo que respecta a cuántos elementos puedan estar en progreso en cada estado.</li>
+            </ul>
+            <h4 class="apartado">Rational unified process (RUP)</h4>
+            <p>El objetivo es estructurar y organizar el desarrollo del software:</p>
+            <ul>
+                <li>Está dirigido por los casos de uso.</li>
+                <li>Centrado en la arquitectura del SW. Se centra en las disferentes vistas del sistema correspondiente a las fases explicadas anteriormente. Analiza el sistema como un todo y a la vez analiza cada una de sus partes.</li>
+                <li>Es un proceso iterativo e incremental: Se divide en pequeños proyectos donde se va incrementando en funcionalidad.</li>
+            </ul>
+            <p>Tres perspectivas:</p>
+            <ul>
+                <li>1. La dinámica: contendrá fases del sistema sobre el tiempo de desarrollo.</li>
+                <li>2. La estática: donde se muestran todas las actividades del proceso.</li>
+                <li>3. La práctica: donde se ponen de manifiesto las buenas práctivas de desarrollo (gestión de los requisitos, modelado UML, verificación de calidad, etc).</li>
+            </ul>
             <div class="menuOpcional">
                 <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
@@ -866,7 +937,20 @@
             </div>
             <!--*********************************************************************-->
             <h3 class="subTitulo" id="subSiete">1.7. - Proceso de obtención de código a partir del código fuente. Herramientas implicadas</h3>
-          
+            <p>La generación de código fuente se lleva a cabo en la etapa de codificación.</p>
+            <h4 class="apartado">1.7.1. Tipos de código</h4>
+            <ul>
+                <li><b>Código fuente:</b> es el escrito por los programadores, utilizando algún editor de texto o alguna herramienta de programación. Se utiliza un lenguaje de alto nivel.</li>
+                <li><b>Código objeto:</b> es el resultante de compilar el código fuente. NO es ejecutable por el ordenador ni entendido por la máquina, es un código intermedio de bajo nivel.</li>
+                <li><b>Código ejecutable:</b> es el resultado de enlazar el código objeto con una serie de rutinas y librerías, obteniendo así el código que es directamente ejecutable por la máquina.</li>
+            </ul>
+            <h4 class="apartado">1.7.2. Obtención y edición del código ejecutable. Herramientas:</h4>
+            <ul>
+                <li><b>Librerías:</b> son archivos que contienen diferentes funcionalidades. Pueden ser llamados desde cualquier aplicación de un sistema operativo.</li>
+                <li><b>Editor:</b> es una herramienta para crear código fuente en un lenguaje de programación. Puede marcar la sintaxis de dicho lenguaje y realizar tareas de autocompletado.</li>
+                <li><b>Compilador:</b> es la herramienta que nos proporciona el lenguaje máquina entendible por nuestro ordenador. A este proceso de traducción se le denomina compilación.</li>
+                <li><b>Enlazador:</b> el objetivo de esta herramienta es coger los objetos que se crean en los primeros pasos de la compilación, quitar los recursos que no necesitan y enlazar el código objeto con sus bibliotecas. El resultado es un archivo ejecutable.</li>
+            </ul>
             <div class="menuOpcional">
                 <a href="../entornoDesarrollo/indice_entornoDesarrollo.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
