--- a/daw/fol/fol_Siete.html
+++ b/daw/fol/fol_Siete.html
@@ -154,7 +154,71 @@
             </table>
             <p>Las principales amenazas para la vida las constituyen las hemorragias, la afixia y el <b>shock</b>.</p>
             <h4 class="apartado">7.4.1. Soporte vital básico</h4>
-            pág 170
+            <p>El tercer paso se basa en socorrer a la víctima. Debemos reconocer primero el estado de consciencia de la víctima, valorar el pulso y la respiración.</p>
+            <p>La misión más importante es mantener la función respiratoria y la circulatoria.</p>
+            <p>La primera medida es evaluar el estado de consciencia de la víctima, encontraremos varios escenarios:</p>
+            <ul>
+                <li>1. Posicionar a la víctima tumbada boca arriba en una superficie dura y plana.</li>
+                <li>2. Flexionar el brazo del lado interno para formar un ángulo recto con su propio cuerpo y mantener la pierna del lado interno recta, y, flexionamos la pierna del lado externo hasta formar un ángulo con el cuerpo.</li>
+                <li>3. Girar el cuerpo de la persona hasta que quede de lado.</li>
+                <li>4. Colocar el dorso de la mano del lado externo, bajo la mejilla. Si la persona debe pasar mucho tiempo en esta posición, la iremos cambiando de lado.</li>
+            </ul>
+            <p>Una mujer embarazada, debe quedar recostada de forma que cargue el peso hacia el costado izquierdo, facilitamos el retorno venoso de las piernas.</p>
+            <p>Si la persona esta <b>inconsciente y no respira, pero tiene pulso</b>, debemos realizar la respiración artificial:</p>
+            <ul>
+                <li>1. Debemos asegurarnos de que las estructuras que conforman las vías aéreas no están obstruidas y se encuentran alineadas para que pueda pasar el aire.</li>
+                <li>2. Realizamos la maniobra frente-mentón para proceder a la respiración artificial. Se debe colocar a la víctima sobre una superficie dura y plana, alineando las extremidades y la cabeza con el cuerpo. Para pacientes con lesión cervical o con sospecha, se debe realizar la tracción mandíbular.</li>
+                <li>3. Nos arrodillamos a la altura de los hombros de la víctima.</li>
+                <li>4. Sujetamos su frente con una mano y elevamos su mandíbula con dos dedos de la otra mano. Al mismo tiempo, abrimos la boca con el pulgar.</li>
+                <li>5. Si hay cuerpos extraños visibles, los retiramos con cuidado.</li>
+                <li>6. Comprobamos la respiración durante no más de 10 segundos, acercando la mejilla a la boca de la víctima y dirigiendo la mirada a su tórax para ver el movimiento.</li>
+                <li>7. Tapamos la nariz de la víctima formando una pinza con los dedos para evitar así la salida del aire.</li>
+                <li>8. Respirar de manera profunda, colocar los labios sobre la boca de la víctima, y espirar de forma fuerte, observando el tórax para ver si asciende.</li>
+                <li>9. Retirar la boca para permitir la espiración, ya que es un movimiento pasivo.</li>
+                <li>10. Seguir hasta que la persona recupere la respiración o lleguen los servicios de emergencias.</li>
+            </ul>
+            <p>Si el herido está <b>inconsciente, no respira</b> y <b>no tiene pulso</b>, debemos realizar la reanimación cardiopulmonar o reanimación combinada:</p>
+            <ul>
+                <li>1. Colocar a la víctima en decúbito suino sobre una superficie dura. Arrodillarse al lado del tórax y retirarle la ropa en esa zona.</li>
+                <li>2. Realizar la maniobra frente-mentón y comprobar la respiración.</li>
+                <li>3. Identificar el esternón en el pecho. Está situado en medio de la línea que une los pezones.</li>
+                <li>4. Colocar el talón de una mano en el centro del pecho y el talón de la otra encima de la primera, y entrecruzar los dedos.</li>
+                <li>5. Extender los brazos verticalmente, sin doblar los codos, procurando que los hombros queden por encima del pecho de la víctima para transmitir el peso del cuerpo sobre el esternón.</li>
+                <li>6. Aplicar 30 compresiones a una frecuencia de 100 por minuto, sin perder el contacto de las manos con el pecho del paciente. El esternón de la víctima debe hundirse entre 3.5 y 5 centímetros aproximadamente.</li>
+                <li>7. Apoyar una mano en la frente y, con el índice y el pulgar, taponar la nariz. Con la otra mano, agarrar la barbilla. Realizar el boca a boca: 2 insuflaciones de aire de un segundo de duración cada una, controlando que el tórax se llene y se vacíe. Si no es así, revisar la apertura aérea.</li>
+                <li>8. Repetir las compresiones y las insuflaciones hasta que la víctima muestre signos de recuperación o podamos ser relevados por los equipos de emergencias.</li>
+                <li>9. El ritmo para seguir es de 30 compresiones y 2 insuflaciones.</li>
+            </ul>
+            <p>Lo ideal sería que dos personas socorrieran a la víctima y le aplicarán simultáneamente las dos técnicas de reanimación.</p>
+            <h4 class="apartado">7.4.2. Quemaduras</h4>
+            <p>Las <b>quemaduras</b> son lesiones que se producen en el organismo por la acción del calor, ya sea en forma sólida, en forma líquida, o en forma gaseosa.</p>
+            <p>Las más habituales son las térmicas, se producen por el contacto con llamas, líquidos o superficies calientes y otras fuentes de altas temperaturas. Las quemaduras químicas, las eléctricas, las radiactivas, las solares y las producidas por congelación.</p>
+            <p>Su gravedad se valoran según la extensión, la localización y la profundidad de estas, además, hay que tener en cuenta otros factores como la edad de la víctima o si presenta patologías previas. Según la progundidad:</p>
+            <table>
+                <tbody>
+                    <tr><th>Primer grado</th></tr>
+                    <tr><td>Afectan solamente a la epidermis, produciendo piel irritada, enrojecimiento y dolor de tipo ardor.</td></tr>
+                    <tr><th>Segundo grado</th></tr>
+                    <tr><td>Las lesiones se producen en la epidermis y, en mayor o menor medida, en la dermis, produciéndose ampollas y dolor. Pueden incluso afectar a las glándulas de sudor o las productoras de grasa.</td></tr>
+                    <tr><th>Tercer grado</th></tr>
+                    <tr><td>Destruyen todo el espesor de la piel, pudiendo afectar a tejidos más profundos. En estos casos, la piel presenta un aspecto acartonado negruzco, necrosis, sobreinfección, pero no hay dolor ni ampollas.</td></tr>
+                </tbody>
+            </table>
+            <p>Las quemaduras producen dolor (pueden ser muy intenso y dejar al paciente en estado de <b>shock</b>), infección y deshidratación. Las pautas a seguir:</p>
+            <ul>
+                <li><b>Eliminar la causa:</b> la mejor manera de apagarlo es sofocarlo (eliminar el oxígeno), envolviendo a la víctima con una manta, chaqueta gruesa, etc.</li>
+                <li><b>Enfriar las zonas afectadas:</b> con abundante agua a temperatura ambiente durante 10 minutos. No debe ser excesivamente fría, ya que podría empeorar la extensión y la profundidad de la lesión y aumentar el riesgo de hipotermia.</li>
+                <li><b>Retirar los objetos susceptibles de impedir la circulación:</b> con la inflamación de los tejidos, anillos, relojes, etc.</li>
+                <li><b>Cubrir la zona afectada:</b> con paños o apósitos limpios, preferiblemente húmedos.</li>
+                <li><b>Si la quemadura se localiza en la cabeza, el cuello o las extremidades, mantenerlas elevadas:</b> para minimizar el dolor y el edema.</li>
+                <li><b>Nunca tocar las ampollas ni la piel muerta:</b> tampoco retirar la ropa que esté pegada a la piel.</li>
+                <li><b>No debemos aplicar ungüentos o cremas.</b></li>
+                <li><b>Buscar atención médica inmediata.</b></li>
+            </ul>
+            <h4 class="apartado">7.4.3. Hemorragias</h4>
+            pág 175
+
+
             <div class="menuOpcional">
                 <a href="../fol/indice_fol.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
